GNOME Bugzilla – Bug 726907
More fixes for HiDpi support
Last modified: 2014-04-17 16:18:54 UTC
This patchset adds some missing pieces to the HiDpi support in gnome-shell. Namely, now background images, border images and other textures loaded by StTextureCache will all be scaled by the display scale factor when needed. That fixes the appearance of switches, close buttons, borders and highlights for panel icons, and more.
Created attachment 272674 [details] [review] texture-cache: use scale factor to load sliced image We need to use a GdkPixbufLoader instead of the straightforward gdk_pixbuf_new_from_file(), since we want to load the image already scaled if possible - e.g. if it's an SVG file.
Created attachment 272675 [details] [review] texture-cache: always call gdk_pixbuf_loader_set_size Just use the regular image size if we don't want to scale it. This is a refactor in preparation for the next commit.
Created attachment 272676 [details] [review] border-image: add support for scale factor In a later commit we'll add support for rendering borders and backgrounds with scale factor.
Created attachment 272677 [details] [review] texture-cache: use scale factor to load background and borders
Created attachment 272678 [details] [review] texture-cache: use scale factor for load_uri_async()
Review of attachment 272674 [details] [review]: OK.
Review of attachment 272675 [details] [review]: OK.
Review of attachment 272676 [details] [review]: OK.
Review of attachment 272677 [details] [review]: OK.
Review of attachment 272678 [details] [review]: Looks good as well ... marked them all ac-after-freeze because we are frozen. They can go into 3.12.1 though.
Attachment 272674 [details] pushed as 74d9b6c - texture-cache: use scale factor to load sliced image Attachment 272675 [details] pushed as 90e52d7 - texture-cache: always call gdk_pixbuf_loader_set_size Attachment 272676 [details] pushed as a22fdea - border-image: add support for scale factor Attachment 272677 [details] pushed as 9ecf466 - texture-cache: use scale factor to load background and borders Attachment 272678 [details] pushed as 9c88fec - texture-cache: use scale factor for load_uri_async()
*** Bug 728382 has been marked as a duplicate of this bug. ***
*** Bug 728393 has been marked as a duplicate of this bug. ***